Fix static spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,30 @@
 }
 
 .pageBar {
-    @apply shadow-md z-50 relative shadow-black bg-cover bg-no-repeat;
+    @apply w-auto shadow-md z-50 relative shadow-black bg-cover bg-no-repeat;
+    height: 10%;
+}
+
+.drewContainer {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding-right: 5%;
+    box-shadow: inset 0px 0px 0px theme(borderWidth.dmain) theme(colors.gray.200),
+        var(--tw-ring-offset-shadow, 0 0 #0000), 
+        var(--tw-ring-shadow, 0 0 #0000), 
+        0 1px 2px 0 #000;
+    @apply  flex backdrop-blur-md rounded-full items-center space-x-dmain;
+}
+
+.drew {
+    width: 10%;
+    aspect-ratio: 1;
+}
+
+.drewIcon {
+    width: 7%;
+    aspect-ratio: 1;
 }
 
 a {
@@ -22,26 +45,31 @@ a:hover {
 }
 
 h1 {
-    font-size: 5.5rem;
+    font-size: 6vw;
     font-weight: 500;
     @apply text-[#ffb038];
 }
 
 h2 {
-    font-size: 4rem;
+    font-size: 4.5vw;
     font-weight: 500;
     @apply text-[#000000];
 }
 
 h3 {
-    font-size: 2rem;
+    font-size: 2.5vw;
     font-weight: 500;
     @apply text-[#000000];
+}
+
+p {
+    font-size: 1.25vw;
 }
 
 .featureDescriptor {
     text-align: left;
     font-weight: 500;
+    padding: 4.5%;
 }
 
 .videoWrapper {
@@ -67,5 +95,5 @@ h3 {
 }
 
 .HF {
-    @apply p-4 rounded bg-white;
+    @apply p-dcardDetail rounded bg-white;
 }
